# pengu-mesh

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.codex/: AGENTS.md  README.md  config.toml
.codex/agents/: browser-operator.toml  cdp-attach-specialist.toml  concurrency-steward.toml  contract-keeper.toml  default.toml  explorer.toml  monitor.toml  observability-owner.toml  perf-bench-lead.toml  pinchtab-gap-hunter.toml  readiness-contract-owner.toml  release-auditor.toml  reviewer.toml  runtime-owner.toml  scenario-harness-owner.toml  worker.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: thresholds.json
benches/artifacts/: Cargo.toml
benches/artifacts/benches/: write_artifact.rs
benches/artifacts/src/: lib.rs
benches/cdp/: Cargo.toml
benches/cdp/benches/: target_parse.rs
benches/cdp/src/: lib.rs
benches/json/: Cargo.toml
benches/json/benches/: envelope.rs
benches/json/src/: lib.rs
benches/persistence/: Cargo.toml
benches/persistence/benches/: state_serialization.rs
benches/persistence/src/: lib.rs
crates/pengu-mesh/: Cargo.toml
crates/pengu-mesh-artifacts/: Cargo.toml
crates/pengu-mesh-artifacts/src/: lib.rs
crates/pengu-mesh-cdp/: Cargo.toml
crates/pengu-mesh-cdp/src/: adblock.rs  animations.rs  human.rs  lib.rs
crates/pengu-mesh-cli/: Cargo.toml
crates/pengu-mesh-cli/src/: main.rs
crates/pengu-mesh-core/: Cargo.toml
crates/pengu-mesh-core/src/: allocation.rs  autorestart.rs  lib.rs  scenario_recorder.rs  semantic.rs  task_queue.rs  threshold.rs  webhook.rs
crates/pengu-mesh-doctor/: Cargo.toml
crates/pengu-mesh-doctor/src/: lib.rs  main.rs
crates/pengu-mesh-http/: Cargo.toml
crates/pengu-mesh-http/src/: lib.rs  proxy.rs
crates/pengu-mesh-macos/: Cargo.toml
crates/pengu-mesh-macos/src/: lib.rs
crates/pengu-mesh-mcp/: Cargo.toml
crates/pengu-mesh-mcp/src/: lib.rs  main.rs
crates/pengu-mesh-shared/: Cargo.toml
crates/pengu-mesh-shared/src/: capability.rs  failure.rs  id.rs  lib.rs  outcome.rs  platform.rs  types.rs
crates/pengu-mesh-state/: Cargo.toml
crates/pengu-mesh-state/src/: lib.rs
crates/pengu-mesh/src/: main.rs
crates/pengu-mesh/tests/: lease_matrix_contract.rs
docs/: agent-execution-charter.md  agent-quickstart.md  apple-silicon-tuning.md  architecture.md  attach-contract.md  autonomous-operating-model.md  benchmarking.md  cdp-contract.md  codex-agent-capability-map.md  current-status.md  dependency-policy.md  feature-file-map.md  implementation-backlog.md  initialization-audit.md  mcp-contract.md  milestone-plan.md  multi-agent-concurrency.md  multimodal-capture.md  observability.md  performance-budget.md  platform-support.md  product-requirements.md  repo-hygiene-plan.md  runtime-model.md  security-model.md  state-and-replay.md  upgrade-path.md  vision.md
docs/agent-handoffs/: 2026-03-12-surpass-pinchtab-execution-handoff.md  2026-06-01-fresh-agent-gate-handoff.md  2026-06-01-live-web-gate-handoff.md  2026-06-01-scenario-evidence-readiness-handoff.md  2026-06-01-scenario-gate-freshness-handoff.md  README.md
docs/baseline/: dependency-audit.md  limitations-we-will-fix.md  parity-matrix.md  upstream-pinchtab-audit.md
docs/decisions/: 0001-rust-first-runtime.md  0002-macos-arm64-tier1.md  0003-stdio-mcp-native.md  0004-http-control-plane.md  0005-sqlite-event-log.md  0006-dashboard-secondary.md  0007-performance-is-a-product-feature.md  0008-durable-task-plane.md
examples/configs/: dev.local.toml
examples/mcp/: server.example.json
examples/workflows/: README.md  common.sh
examples/workflows/evidence-chain/: README.md  run.sh
examples/workflows/fresh-agent/: README.md  run.sh
examples/workflows/live-web/: README.md  run.sh
examples/workflows/operator-diagnosis/: README.md  run.sh
examples/workflows/pinchtab-comparison/: README.md  run.sh
examples/workflows/startup-readiness/: README.md  run.sh
examples/workflows/structured-failure/: README.md  run.sh
examples/workflows/weak-prompt/: README.md  run.sh
reference/platform/macos/: assistive-overlays.json  chrome-native-surface-taxonomy.json  permissions-services.json  system-settings-deeplinks.json
reference/upstream/: README.md  pinchtab.METADATA.json
reports/: visual-verification-20260312T172200Z.md
reports/local-gate/: README.md
scripts/bench/: discover.sh  run.sh  threshold-check.sh
scripts/browser/: chrome-allow-remote-debugging.sh  chrome-dev-navigate.sh  chrome-dialog-click.sh
scripts/dev/: bootstrap-rust.sh
scripts/doctor/: benchmark_env_fingerprint.sh  normalize_inventory_for_probe.py  toolchain_inventory.sh
scripts/fixtures/: README.md
scripts/release/: README.md  attach-continuity-smoke.sh  browser-lifecycle-integration.sh  browser-surface-smoke.sh  continuity-smoke.sh  diagnose-smoke.sh  evidence-chain-smoke.sh  host-access-smoke.sh  lease-smoke.sh  local-gate.sh  promote-local-gate-bundle.sh  scenario-gate-manifest.py  scenario-gates.json  tab-lifecycle-integration.sh
testdata/: stage1-smoke.html
testdata/protocol/: sample-cdp-message.json
web/dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/dashboard/src/: App.tsx  api.ts  styles.css  types.ts
