[workspace]
members = [
    "crates/pengu-mesh",
    "crates/pengu-mesh-artifacts",
    "crates/pengu-mesh-cdp",
    "crates/pengu-mesh-cli",
    "crates/pengu-mesh-core",
    "crates/pengu-mesh-doctor",
    "crates/pengu-mesh-http",
    "crates/pengu-mesh-macos",
    "crates/pengu-mesh-mcp",
    "crates/pengu-mesh-shared",
    "crates/pengu-mesh-state",
    "benches/cdp",
    "benches/persistence",
    "benches/artifacts",
    "benches/json",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AlonePenguin/pengu-mesh"
homepage = "https://github.com/AlonePenguin/pengu-mesh"
authors = ["AlonePenguin"]
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
divan = "0.1.21"
image = { version = "0.25.6", default-features = false, features = ["png"] }
ordered-float = { version = "4.6.0", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tungstenite = "0.28.0"
ureq = { version = "3.2.0", default-features = false }
url = "2.5.7"
