[package]
name = "pengu-mesh-bench-persistence"
version.workspace = true
edition.workspace = true
autobenches = false
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pengu-mesh-shared = { path = "../../crates/pengu-mesh-shared" }
serde_json.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "persistence_state_serialization"
path = "benches/state_serialization.rs"
harness = false
