[package]
name = "pengu-mesh-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
time.workspace = true
pengu-mesh-shared = { path = "../pengu-mesh-shared" }

[dev-dependencies]
tempfile.workspace = true
