[package]
name = "pengu-mesh-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
ureq.workspace = true
url.workspace = true
pengu-mesh-shared = { path = "../pengu-mesh-shared" }
