[package]
name = "pengu-mesh-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
pengu-mesh-core = { path = "../pengu-mesh-core" }
pengu-mesh-shared = { path = "../pengu-mesh-shared" }
