[package]
name = "pengu-mesh-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
